WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256428
[GStreamer][MSE] Decoder sometimes receives caps event before stream-start
https://bugs.webkit.org/show_bug.cgi?id=256428
Summary
[GStreamer][MSE] Decoder sometimes receives caps event before stream-start
Philippe Normand
Reported
2023-05-07 03:13:52 PDT
And that triggers a crash in the recently added player codecProbe. operator():<MSE-media-player-5> Setting codec for stream (null) to avc1.64002A Reproduces flakily on release builds (wasn't able to reproduce this on debug) when loading
https://interbrand.com/
For now I'll add a workaround/warning. This codec probe is not critically important, but there's a bug to dive in here, caps events should not reach a pad before stream-start.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-05-07 03:19:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13548
EWS
Comment 2
2023-05-08 04:30:19 PDT
Committed
263791@main
(c49bd915d945): <
https://commits.webkit.org/263791@main
> Reviewed commits have been landed. Closing PR #13548 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-08 04:31:21 PDT
<
rdar://problem/109034676
>
Philippe Normand
Comment 4
2023-05-08 04:40:01 PDT
This needs a proper patch...
Michael Catanzaro
Comment 5
2023-05-25 14:34:22 PDT
(This was on the backport list for 2.40, but it depends on
263585@main
which has many conflicts, so I decided not to cherry-pick it.)
Philippe Normand
Comment 6
2024-01-20 04:40:18 PST
(In reply to Philippe Normand from
comment #4
)
> This needs a proper patch...
This works now, I can't trigger the warning anymore...
Carlos Bentzen
Comment 7
2024-04-19 06:22:42 PDT
(In reply to Philippe Normand from
comment #6
)
> (In reply to Philippe Normand from
comment #4
) > > This needs a proper patch... > > This works now, I can't trigger the warning anymore...
I can trigger this 100% of the time with media/media-source/media-source-abort-resets-parser.html in release mode (the test times out due to a deadlock as well, fwiw). I'm working on fixing to that test, and with my current WIP solution, this warning also goes away. But the fix isn't quite ready to be merged yet. (
bug 272975
)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug