[GStreamer][MSE] Decoder sometimes receives caps event before stream-start https://bugs.webkit.org/show_bug.cgi?id=256428

Reviewed by Xabier Rodriguez-Calvar.

Warn about caps event reaching the video decoder before stream-start. This is a temporary workaround
for broken behaviour of the playbin3/webkitmediasource combo.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::setupCodecProbe):

Canonical link: https://commits.webkit.org/263791@main